small addition to my page content

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
       <title>hello cousera</title>
     </head>
     <body>
-    <h1>hello cousera</h1>
+    <h1>Hello cousera! it is a very nice course</h1>
     </body>
 </html>
